--- a/Password Generator/index.html
+++ b/Password Generator/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Password Generator</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
@@ -41,13 +41,13 @@
 
             <!-- Checkboxes -->
             <div class="check">
-                <input type="checkbox" id="uppercase">
+                <input type="checkbox" id="uppercase" checked>
 
                 <label for="uppercase">Includes Uppercase letters</label>
             </div>
             
             <div class="check">
-                <input type="checkbox" id="lowercase">
+                <input type="checkbox" id="lowercase" checked>
 
                 <label for="lowercase">Includes Lowercase letters</label>
             </div>
